--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - CRAWL4AI_URL=http://crawl4ai:11235
+      - CRAWL4AI_URL=http://localhost:11235
     depends_on:
       crawl4ai:
         condition: service_healthy
